--- a/blueprinter-spring-boot-core/pom.xml
+++ b/blueprinter-spring-boot-core/pom.xml
@@ -4,14 +4,14 @@
     <parent>
         <groupId>dev.vinyard.blueprinter</groupId>
         <artifactId>blueprinter</artifactId>
-        <version>2.0.1</version>
+        <version>3.0.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>dev.vinyard.blueprinter.core</groupId>
     <artifactId>blueprinter-spring-boot-core</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.1</version>
+    <version>3.0.0</version>
     <name>blueprinter-core</name>
 
     <build>
@@ -20,6 +20,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
             </plugin>
         </plugins>
     </build>
